--- a/srcs/requirements/nginx/conf/gshim_conf.conf
+++ b/srcs/requirements/nginx/conf/gshim_conf.conf
@@ -10,9 +10,14 @@ server {
 		try_files $uri $uri/ =404;
 	}
 	location /gshim {
-		index index.html index.htm;
+		return 200;
 	}
+	location = /200.html {
+			internal;
+	}
+
+
 	location /myukang {
-		index index.html index.htm;
+		return 200;
 	}
 }
