--- a/srcs/requirements/nginx/dockerfile
+++ b/srcs/requirements/nginx/dockerfile
@@ -1,5 +1,13 @@
+############################################
+# ███╗   ██╗ ██████╗ ██╗███╗   ██╗██╗  ██╗ #
+# ████╗  ██║██╔════╝ ██║████╗  ██║╚██╗██╔╝ #
+# ██╔██╗ ██║██║  ███╗██║██╔██╗ ██║ ╚███╔╝  #
+# ██║╚██╗██║██║   ██║██║██║╚██╗██║ ██╔██╗  #
+# ██║ ╚████║╚██████╔╝██║██║ ╚████║██╔╝ ██╗ #
+# ╚═╝  ╚═══╝ ╚═════╝ ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝ #
+############################################
+
 #FROM : 이미지를 생성할 때 사용할 기반 이미지를 지정
-#FROM nginx:1.22.0-alpine
 FROM alpine:3.14
 
 #RUN : 이미지를 생성할 때 실행할 코드를 지정한다. ex)패키지 설치 or 파일권한변경
@@ -13,7 +21,8 @@ RUN apk add nginx
 #WORKDIR : 작업 디렉토리를 지정. 없으면 생성. 이후 명령어는 해당 디렉토리에서.
 
 #COPY : 파일이나 폴더를 이미지에 복사한다.
-COPY ./conf/gshim_conf.conf /etc/nginx/sites-available/default
+#COPY ./conf/gshim_conf.conf /etc/nginx/sites-available/default
+COPY ./conf/gshim_conf.conf /etc/nginx/http.d/default.conf
 
 #ENV : 이미지에서 사용할 환경 변수 값을 지정한다.
 
