--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,26 +1,28 @@
 version: '3'
 services:
-  # database:
-  #   # Dockerfile이 있는 위치
-  #   build: ./database
-  #   # 내부에서 개방할 포트 : 외부에서 접근할 포트
-  #   ports:
-  #     - "3306:3306"
+  database:
+    # Dockerfile이 있는 위치
+    build: ./requirements/mariadb
+    tty: true
+    # 내부에서 개방할 포트 : 외부에서 접근할 포트
+    # ports:
+    #   - "3306:3306"
   # wordpress:
-  #   build: ./wordpress
+  #   build: ./requirements/wordpress
   #   # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
   #   volumes:
   #     - ./backend:/usr/src/app
-  #   ports:
-  #     - "5000:5000"
+  #   # ports:
+  #   #   - "9000:9000"
   #   # 환경변수 설정
   #   environment:
   #     - DBHOST=database
-  nginx:
-    build: ./requirements/nginx
-    # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
-    volumes:
-      - ./somedir:/home/node/app
-    ports:
-      - "443:80"
-    #tty: true
+
+  # nginx:
+  #   build: ./requirements/nginx
+  #   # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
+  #   volumes:
+  #     - ./somedir:/home/node/app
+  #   ports:
+  #     - "443:80"
+  #   #tty: true
