--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,22 +7,34 @@ services:
     # 내부에서 개방할 포트 : 외부에서 접근할 포트
     # ports:
     #   - "3306:3306"
-  # wordpress:
-  #   build: ./requirements/wordpress
-  #   # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
-  #   volumes:
-  #     - ./backend:/usr/src/app
-  #   # ports:
-  #   #   - "9000:9000"
-  #   # 환경변수 설정
-  #   environment:
-  #     - DBHOST=database
+    #WordPress Database를 포함하는 볼륨1
+    volumes:
+      - wp_db:/home/mariadb
 
-  # nginx:
-  #   build: ./requirements/nginx
-  #   # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
-  #   volumes:
-  #     - ./somedir:/home/node/app
-  #   ports:
-  #     - "443:80"
-  #   #tty: true
+
+
+  wordpress:
+    build: ./requirements/wordpress
+    # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
+    # ports:
+    #   - "9000:9000"
+    # 환경변수 설정
+    environment:
+      - DBHOST=database
+     #WordPress websites를 포함하는 볼륨2
+    volumes:
+    - websites:/home/mariadb
+
+  nginx:
+    build: ./requirements/nginx
+    # 연결할 외부 디렉토리 : 컨테이너 내 디렉토리
+    # volumes:
+    #   - ./somedir:/home/node/app
+    ports:
+      - "443:80"
+    #tty: true
+
+  volumes:
+    wp_db:
+    websites:
+
