--- a/srcs/requirements/nginx/conf/gshim_conf.conf
+++ b/srcs/requirements/nginx/conf/gshim_conf.conf
@@ -6,8 +6,11 @@ server {
 	index index.html index.htm;
 
 	server_name _;
-	location / {
-		try_files $uri $uri/ =404;
+
+	location ~ \.php$ {
+		fastcgi_pass      127.0.0.1:9000;
+		fastcgi_index     index.php;
+		include           fastcgi.conf;
 	}
 	location /gshim {
 		return 200;
@@ -15,7 +18,6 @@ server {
 	location = /200.html {
 			internal;
 	}
-
 
 	location /myukang {
 		return 200;
