--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3'
 services:
-  database:
-    # Dockerfile이 있는 위치
-    build: ./requirements/mariadb
-    tty: true
-    # 내부에서 개방할 포트 : 외부에서 접근할 포트
-    # ports:
-    #   - "3306:3306"
-    #WordPress Database를 포함하는 볼륨1
-    volumes:
-      - wp_db:/home/mariadb
+  # database:
+  #   # Dockerfile이 있는 위치
+  #   build: ./requirements/mariadb
+  #   tty: true
+  #   # 내부에서 개방할 포트 : 외부에서 접근할 포트
+  #   # ports:
+  #   #   - "3306:3306"
+  #   #WordPress Database를 포함하는 볼륨1
+  #   # volumes:
+  #   #   - wp_db:/home/mariadb
 
 
 
@@ -21,6 +21,7 @@ services:
     # 환경변수 설정
     environment:
       - DBHOST=database
+    tty: true
      #WordPress websites를 포함하는 볼륨2
     volumes:
     - websites:/home/mariadb
@@ -32,9 +33,10 @@ services:
     #   - ./somedir:/home/node/app
     ports:
       - "443:80"
-    #tty: true
 
-  volumes:
-    wp_db:
-    websites:
+    volumes:
+    - websites:/home/mariadb
+
+volumes:
+  websites:
 
