--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,23 @@
-DOMAIN_NAME=wil.42.fr
-# certificates
+#DOMAIN_NAME=gshim.42.fr
+DOMAIN_NAME=localhost
+# Mariadb
 
-# MYSQL SETUP
+MYSQL_ROOT_PASSWORD=1234
+MYSQL_USR=gshim
+MYSQL_PASSWORD=1234
+MYSQL_DATABASE=wordpress_db
+MYSQL_HOST=mariadb
+
+# Wordpress env
+
+ADMIN_USER=king_shim
+ADMIN_PASSWORD=1234
+ADMIN_EMAIL=king_shim@gmail.com
+
+REG_USER=gshim
+REG_PASSWORD=1234
+REG_EMAIL=gshim@gmail.com
+
+
+
+# Redis?
