--- a/srcs/requirements/nginx/conf/gshim_conf.conf
+++ b/srcs/requirements/nginx/conf/gshim_conf.conf
@@ -1,25 +1,30 @@
+# server {
+# 	listen 80;
+# 	server_name gshim.42.fr;
+
+# 	location / {
+# 		return 301 https://$host$request_uri;
+# 	}
+# }
+
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+	listen 443 ssl;
 
-	root /usr/share/nginx/html;
-	index index.html index.htm;
+	# SSL(인증서, 비밀키 경로설정)
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/nginx/ssl/gshim.42.fr.crt;
+	ssl_certificate_key /etc/nginx/ssl/gshim.42.fr.key;
 
-	server_name _;
+	# test by
+	# openssl s_client -connect localhost:443
 
-	location ~ \.php$ {
-		fastcgi_pass      127.0.0.1:9000;
-		fastcgi_index     index.php;
-		include           fastcgi.conf;
-	}
-	location /gshim {
-		return 200;
-	}
-	location = /200.html {
-			internal;
-	}
+	root /var/www/html;
+	index index.php index.html index.htm;
 
-	location /myukang {
-		return 200;
+	location ~ \.*$ {
+		fastcgi_param		SCRIPT_FILENAME /var/www/html/$fastcgi_script_name;
+		fastcgi_pass		wordpress:9000;
+		fastcgi_index		index.php;
+		include				fastcgi.conf;
 	}
 }
