--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     #WordPress Database를 포함하는 볼륨
     volumes:
       - type: bind
-        source: /home/gshim/data/db_volume
+        source: /Users/simgeon-u/Desktop/SEOUL42/Inception/data/db_volume
         target: /var/lib/mysql
       # - type: volume
       #   source: db_volume
@@ -29,8 +29,8 @@ services:
       - "9000"
     volumes:
       - type: bind
-        source: /home/gshim/data/wp_volume
-        target: /home/gshim/data
+        source: /Users/simgeon-u/Desktop/SEOUL42/Inception/data/wp_volume
+        target: /var/www/html
       # - type: volume
       #   source: wp_volume
       #   target: /home/gshim/data
@@ -50,7 +50,7 @@ services:
       - "443:443"
     volumes:
       - type: bind
-        source: /home/gshim/data
+        source: /Users/simgeon-u/Desktop/SEOUL42/Inception/data/wp_volume
         target: /var/www/html
       # - type: volume
       #   source: wp_volume
