--- a/srcs/requirements/nginx/conf/gshim_conf.conf
+++ b/srcs/requirements/nginx/conf/gshim_conf.conf
@@ -9,7 +9,7 @@
 
 server {
 	listen 443 ssl;
-	server_name gshim.42.fr
+	#server_name gshim.42.fr
 	# SSL(인증서, 비밀키 경로설정)
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/ssl/gshim.42.fr.crt;
