--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -16,6 +16,8 @@ COPY /tools/mariadb_conf.sh /
 
 RUN chmod +x /mariadb_conf.sh
 
-ENTRYPOINT ["/sbin/tini", "--", "./mariadb_conf.sh"];
+ENTRYPOINT ["/sbin/tini", "--", "./mariadb_conf.sh"]
+
+CMD ["/usr/bin/mysqld", "--user=root"]
 
 EXPOSE 330
