--- a/srcs/requirements/mariadb/tools/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/tools/mariadb-server.cnf
@@ -1,34 +1,12 @@
-#
-# These groups are read by MariaDB server.
-# Use it for options that only the server (but not clients) should see
 
-# this is read by the standalone daemon and embedded servers
-[server]
+[server-client]
+user=mysql
 socket=/var/lib/mysql/mysql.sock
-# this is only for the mysqld standalone daemon
+datadir=/var/lib/mysql
 [mysqld]
-#skip-networking
 bind-address=0.0.0.0
 
-# Galera-related settings
 [galera]
-# Mandatory settings
-#wsrep_on=ON
-#wsrep_provider=
-#wsrep_cluster_address=
-#binlog_format=row
-#default_storage_engine=InnoDB
-#innodb_autoinc_lock_mode=2
-#
-# Allow server to accept connections on all interfaces.
-#
-#bind-address=0.0.0.0
-#
-# Optional setting
-#wsrep_slave_threads=1
-#innodb_flush_log_at_trx_commit=0
-
-# this is only for embedded server
 [embedded]
 
 # This group is only read by MariaDB servers, not by MySQL.
